crates/memzer/derive/src/tests/snapshots/memzer_derive__tests__expand__find_root_with_candidates-2.snap
---
source: crates/memzer/derive/src/tests/expand.rs
expression: pretty(ts_2)
---
compile_error!(
    "MemZer: could not find any of the candidate crates: `a`. Add `a = { version = \\\"*\\\" }` to your Cargo.toml."
);
