crates/memzer/derive/src/tests/snapshots/memzer_derive__tests__expand__find_root_with_candidates.snap
---
source: crates/memzer/derive/src/tests/expand.rs
expression: pretty(ts_1)
---
compile_error!(
    "MemZer: could not find any of the candidate crates: `a`, `b`. Add `a = { version = \\\"*\\\" }` (preferred) or `b = { version = \\\"*\\\" }` to your Cargo.toml."
);
